---
source: tera/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: tera/src/snapshot_tests/lexer_inputs/success/raw.txt
---
[
    CONTENT("Hello"),
    CONTENT("Some ignored {{ content }}  {% if true %} hello {%\n"),
    CONTENT("World\n\nInline as well "),
    CONTENT(" {{ hey }} "),
    CONTENT("\n"),
]
